--- a/books_cbv/templates/books_cbv/animal_list.html
+++ b/books_cbv/templates/books_cbv/animal_list.html
@@ -24,7 +24,7 @@
         <div class="row">
           <div class="col-md-9">{{ animal.name }}</div>
           <div class="col-md-1">
-            <a href="{% url 'books_cbv:book_edit_animal' animal.id %}">
+            <a href="{% url 'books_cbv:book_edit_historia' animal.id %}">
               <span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
             </a>
           </div>
