--- a/books_cbv/templates/books_cbv/base.html
+++ b/books_cbv/templates/books_cbv/base.html
@@ -14,6 +14,7 @@
 
     <body>
     {% block content %}{% endblock content %}
+    <a href="{% url 'books_cbv:login' %}" class="button-mp links salir">Salir</a>
     <script type="text/javascript">
       $('.datepicker').datepicker();
     </script>
