--- a/books_cbv/templates/books_cbv/cliente_confirm_delete.html
+++ b/books_cbv/templates/books_cbv/cliente_confirm_delete.html
@@ -18,7 +18,7 @@
               Estas seguro de eliminar a "{{ object }}" ?
             </div>
             <input class="button-mp form-btn-eliminar"  type="submit" value="Eliminar" />
-            <a href="{% url 'books_cbv:book_list' %}" class="button-mp links">Cancelar</a>
+            <a href="{% url 'books_cbv:list3' %}" class="button-mp links">Cancelar</a>
         </form>
       </div>
     </div>
