--- a/books_cbv/templates/books_cbv/historia_form.html
+++ b/books_cbv/templates/books_cbv/historia_form.html
@@ -13,7 +13,7 @@
 
     <div class="row">
       <div class="col-md-12 text-center">
-        Edicion de historia clínica
+        Crear historia clínica
       </div>
       <div>&nbsp;</div>
     </div>
