--- a/books_cbv/static/books_cbv/css/style.css
+++ b/books_cbv/static/books_cbv/css/style.css
@@ -1,107 +1,111 @@
 body {
-	background-color: #e8e6eb;
-	font-family: 'Oswald', sans-serif;
+  background-color: #e8e6eb;
+  font-family: 'Oswald', sans-serif;
 }
 
 .container {
-	-webkit-box-shadow: 3px 3px 15px 0 rgba(0,0,0,0.25);
-	-moz-box-shadow: 3px 3px 15px 0 rgba(0,0,0,0.25);
-	box-shadow: 3px 3px 15px 0 rgba(0,0,0,0.25);
-	padding: 3%;
-	margin-top: 20px;
-	border-top: 10px solid #30b8b3;
+  -webkit-box-shadow: 3px 3px 15px 0 rgba(0,0,0,0.25);
+  -moz-box-shadow: 3px 3px 15px 0 rgba(0,0,0,0.25);
+  box-shadow: 3px 3px 15px 0 rgba(0,0,0,0.25);
+  padding: 3%;
+  margin-top: 20px;
+  border-top: 10px solid #30b8b3;
 }
 
 .header img{
-	margin-left: auto;
-	margin-right: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 .title {
-	color: #4cccd4;
-	text-align: center;
-	font-size: 5em;
+  color: #4cccd4;
+  text-align: center;
+  font-size: 5em;
   padding-top: 4%;
-	padding-bottom: 2%;
+  padding-bottom: 2%;
 }
 
 .links {
-	margin-bottom: 0px!important;
+  margin-bottom: 0px!important;
+}
+
+.salir {
+  
 }
 
 .logo {
-	padding: 10px;
+  padding: 10px;
 }
 
 .glyphicon {
-	color: #4cccd4;
+  color: #4cccd4;
 }
 
 .button-mp {
-	width: 200px;
-	font-size: 1.5em;
+  width: 200px;
+  font-size: 1.5em;
   text-transform: uppercase !important;
   margin: 3% 3%;
-	text-decoration: none!important;
-	background-color: #4cccd4;
-	color: white;
-	border-radius: 29px;
-	border-width: 2.5px !important;
-	padding: 16px 18px;
-	margin-left: 10px;
-	text-align: center;
-	cursor: pointer;
-	display: -webkit-box;
-	display: -webkit-flex;
-	display: -ms-flexbox;
-	-webkit-transition: all 60ms ease-in-out;
-	transition: all 60ms ease-in-out;
-	display: inline-block;
-	-webkit-transition: background-color 0.2s ease;
-	-moz-transition: background-color 0.2s ease;
-	-o-transition: background-color 0.2s ease;
-	transition: background-color 0.2s ease;
+  text-decoration: none!important;
+  background-color: #4cccd4;
+  color: white;
+  border-radius: 29px;
+  border-width: 2.5px !important;
+  padding: 16px 18px;
+  margin-left: 10px;
+  text-align: center;
+  cursor: pointer;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  -webkit-transition: all 60ms ease-in-out;
+  transition: all 60ms ease-in-out;
+  display: inline-block;
+  -webkit-transition: background-color 0.2s ease;
+  -moz-transition: background-color 0.2s ease;
+  -o-transition: background-color 0.2s ease;
+  transition: background-color 0.2s ease;
 }
 
 .button-mp:hover {
-	color: white;
-	background-color: #1c7f86;
-	-webkit-transition: background-color 0.2s ease;
-	-moz-transition: background-color 0.2s ease;
-	-o-transition: background-color 0.2s ease;
-	transition: background-color 0.2s ease;
+  color: white;
+  background-color: #1c7f86;
+  -webkit-transition: background-color 0.2s ease;
+  -moz-transition: background-color 0.2s ease;
+  -o-transition: background-color 0.2s ease;
+  transition: background-color 0.2s ease;
 }
 
 .table-cel {
-	border: 1px solid #ccc8c8;
-	padding: 5px 15px;
-	margin-bottom: 3px
+  border: 1px solid #ccc8c8;
+  padding: 5px 15px;
+  margin-bottom: 3px
 }
 
 input {
-	display: block;
-	width: 100%;
-	height: 34px;
-	padding: 6px 12px;
-	font-size: 14px;
-	line-height: 1.42857143;
-	color: #555;
-	background-color: #fff;
-	background-image: none;
-	border: 1px solid #ccc;
-	border-radius: 4px;
-	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-	box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-	-webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
-	-o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-	transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+  -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
 form {
-	padding: 20px;
-	border: 1px solid #ccc8c8;
+  padding: 20px;
+  border: 1px solid #ccc8c8;
 }
 
 .form-btn {
-	height: auto;
+  height: auto;
   border: none;
   display: block;
   margin-left: auto;
@@ -109,12 +113,37 @@ form {
 }
 
 .form-btn-eliminar {
-	height: auto;
+  height: auto;
   border: none;
 }
 
 .text-delete {
-	font-size: 1.8em;
-	padding: 10px;
-	text-align: center;
+  font-size: 1.8em;
+  padding: 10px;
+  text-align: center;
+}
+
+/* Login */
+.form-login {
+  padding: 50px;
+  background: white;
+  margin: 20px;
+  -webkit-box-shadow: 3px 3px 15px 0 rgba(0,0,0,0.25);
+  -moz-box-shadow: 3px 3px 15px 0 rgba(0,0,0,0.25);
+  box-shadow: 3px 3px 15px 0 rgba(0,0,0,0.25);
+  border-right: 4px solid #30b8b3;
+}
+.form-login > a {
+  font-size: 1em;
+  width: 125px;
+  display: inline-block!important;
+  margin-top: 40px;
+}
+.input-login {
+  border: none;
+  background-color: transparent;
+  border-bottom: 2px solid #30b8b3;
+  box-shadow: none;
+  border-radius: 0px;
+  margin-bottom: 10px;
 }
