--- a/books_cbv/templates/books_cbv/cliente.html
+++ b/books_cbv/templates/books_cbv/cliente.html
@@ -13,7 +13,7 @@
 
     <div class="row">
       <div class="col-md-12 text-center">
-        Lista de citas
+        Menu de opciones
       </div>
       <div>&nbsp;</div>
     </div>
