--- a/books_cbv/templates/books_cbv/historia_confirm_delete.html
+++ b/books_cbv/templates/books_cbv/historia_confirm_delete.html
@@ -12,17 +12,20 @@
     </div>
 
     <div class="row">
-      <div class="col-md-12 text-center">
-        Menu de opciones
+      <div class="col-md-6 col-md-offset-3 text-center">
+        <form method="post">{% csrf_token %}
+            <div class="text-delete">
+              Estas seguro de eliminar a "{{ object }}" ?
+            </div>
+            <input class="button-mp form-btn-eliminar"  type="submit" value="Eliminar" />
+            <a href="{% url 'books_cbv:book_list' %}" class="button-mp links">Cancelar</a>
+        </form>
       </div>
-      <div>&nbsp;</div>
     </div>
 
     <div class="row">
       <div class="col-md-8 col-md-offset-2 text-center">
-        <a href="{% url 'books_cbv:book_new_cita' %}" class="button-mp links">Crear cita</a>
-        <a href="{% url 'books_cbv:book_list_cita' %}" class="button-mp links">Listado</a>
-        <a href="{% url 'books_cbv:home' %}" class="button-mp links">Menu home</a><br>
+        <a href="{% url 'books_cbv:home' %}" class="button-mp links">Menu</a><br>
       </div>
     </div>
   </div>
