--- a/books_cbv/templates/books_cbv/historia_list.html
+++ b/books_cbv/templates/books_cbv/historia_list.html
@@ -24,12 +24,12 @@
         <div class="row">
           <div class="col-md-10">{{ cliente.name }}</div>
           <div class="col-md-1">
-            <a href="{% url 'books_cbv:book_edit' cliente.id %}">
+            <a href="{% url 'books_cbv:book_edit_historia' cliente.id %}">
               <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
             </a>
           </div>
           <div class="col-md-1">
-            <a href="{% url 'books_cbv:book_delete' cliente.id %}">
+            <a href="{% url 'books_cbv:book_delete_historia' cliente.id %}">
               <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
             </a>
           </div>
@@ -40,7 +40,7 @@
 
     <div class="row">
       <div class="col-md-8 col-md-offset-2 text-center">
-        <a href="{% url 'books_cbv:book_new_historia' %}" class="button-mp links">Crear mascota</a>
+        <a href="{% url 'books_cbv:book_new_historia' %}" class="button-mp links">Crear historia</a>
         <a href="{% url 'books_cbv:home' %}" class="button-mp links">Menu</a><br>
       </div>
     </div>
