--- a/books_cbv/templates/books_cbv/base.html
+++ b/books_cbv/templates/books_cbv/base.html
@@ -10,13 +10,25 @@
         <script src="{% static 'books_cbv/bootstrap/js/bootstrap.min.js' %}"></script>
         <script src="{% static 'books_cbv/js/bootstrap-datepicker.min.js' %}"></script>
         <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,700" rel="stylesheet">
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     </head>
 
     <body>
     {% block content %}{% endblock content %}
     <a href="{% url 'books_cbv:login' %}" class="button-mp links salir">Salir</a>
     <script type="text/javascript">
-      $('.datepicker').datepicker();
+        $('.datepicker').datepicker();
+        
+        /*function getAnimals() {
+            return axios.get('/books_cbv/test');
+        }
+        var dataAnimal = getAnimals().then(function(response) {
+            console.log(response.data);
+        });
+        console.log(dataAnimal);*/
+
+        
+
     </script>
     </body>
 </html>
