--- a/books_cbv/templates/books_cbv/animal_list.html
+++ b/books_cbv/templates/books_cbv/animal_list.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-  <div class="container">
+  <div class="container" id="moduleAnimal">
     <div class="row">
       <div class="col-md-12 header">
         <div class="text-center">
