--- a/books_cbv/templates/books_cbv/base.html
+++ b/books_cbv/templates/books_cbv/base.html
@@ -6,29 +6,32 @@
         <link rel="stylesheet" type="text/css" href="{% static 'books_cbv/bootstrap/css/bootstrap.min.css' %}" />
         <link rel="stylesheet" type="text/css" href="{% static 'books_cbv/css/style.css' %}" />
         <link rel="stylesheet" type="text/css" href="{% static 'books_cbv/css/bootstrap-datepicker3.min.css' %}" />
+        <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,700" rel="stylesheet">
         <script src="{% static 'books_cbv/js/jquery-3.1.1.min.js' %}"></script>
+        <!--script src="{% static 'books_cbv/js/axios.js' %}"></script>
+        <script src="{% static 'books_cbv/js/vue.js' %}"></script-->
+
         <script src="{% static 'books_cbv/bootstrap/js/bootstrap.min.js' %}"></script>
         <script src="{% static 'books_cbv/js/bootstrap-datepicker.min.js' %}"></script>
-        <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,700" rel="stylesheet">
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     </head>
 
     <body>
-    {% block content %}{% endblock content %}
-    <a href="{% url 'books_cbv:login' %}" class="button-mp links salir">Salir</a>
-    <script type="text/javascript">
-        $('.datepicker').datepicker();
+        {% block content %}{% endblock content %}
         
-        /*function getAnimals() {
-            return axios.get('/books_cbv/test');
-        }
-        var dataAnimal = getAnimals().then(function(response) {
-            console.log(response.data);
-        });
-        console.log(dataAnimal);*/
+        <!--a href="{% url 'books_cbv:login' %}" class="button-mp links salir">Salir</a-->
+        <div id="app">
+  hola {{ messazz
 
-        
-
-    </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.3.4/vue.min.js"></script>
+        <script type="text/javascript">
+            var app = new Vue({
+            el: '#app',
+            data: {
+                message: 'Hello Vue!'
+            }
+            })
+        </script>
+        <script src="{% static 'books_cbv/js/app.js' %}"></script>
     </body>
 </html>
