--- a/books_cbv/templates/books_cbv/base.html
+++ b/books_cbv/templates/books_cbv/base.html
@@ -20,15 +20,17 @@
         {% block content %}{% endblock content %}
         
         <!--a href="{% url 'books_cbv:login' %}" class="button-mp links salir">Salir</a-->
-        <div id="app">
-  hola {{ messazz
+         <div id="app">
+            hola ${ message }
+        </div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.3.4/vue.min.js"></script>
         <script type="text/javascript">
             var app = new Vue({
             el: '#app',
+            delimiters: ['${', '}'],
             data: {
-                message: 'Hello Vue!'
+                message: 'Hello Vue!',
             }
             })
         </script>
