Adding some changes in the irls

--- a/books_cbv/templates/books_cbv/cliente.html
+++ b/books_cbv/templates/books_cbv/cliente.html
@@ -13,15 +13,15 @@
 
     <div class="row">
       <div class="col-md-12 text-center">
-        Menu de opciones
+        Menu de opciones de clientes
       </div>
       <div>&nbsp;</div>
     </div>
 
     <div class="row">
       <div class="col-md-8 col-md-offset-2 text-center">
-        <a href="{% url 'books_cbv:book_new_cita' %}" class="button-mp links">Crear cita</a>
-        <a href="{% url 'books_cbv:book_list_cita' %}" class="button-mp links">Listado</a>
+        <a href="{% url 'books_cbv:book_list' %}" class="button-mp links">Crear cliente</a>
+        <a href="{% url 'books_cbv:book_new' %}" class="button-mp links">Listado</a>
         <a href="{% url 'books_cbv:home' %}" class="button-mp links">Menu home</a><br>
       </div>
     </div>
