--- a/books_cbv/templates/books_cbv/menu.html
+++ b/books_cbv/templates/books_cbv/menu.html
@@ -14,7 +14,7 @@
     <div class="row">
       <div class="col-md-12 text-center">
         <div class="title">MY PET</div>
-        <a href="/books_cbv/clients" class="button-mp links">CLientes</a>
+        <a href="/books_cbv/clients" class="button-mp links">Clientes</a>
         <a href="/books_cbv/animal" class="button-mp links">Mascotas</a>
         <a href="/books_cbv/cita" class="button-mp links">Citas</a><br>
         <a href="/books_cbv/historia" class="button-mp links">Historias clínicas</a><br>
