--- a/books_cbv/templates/books_cbv/animal_list.html
+++ b/books_cbv/templates/books_cbv/animal_list.html
@@ -2,6 +2,9 @@
 {% load static %}
 
 {% block content %}
+  <div id="animangelito">
+    test vue {{ message }}
+  </div>
   <div class="container" id="moduleAnimal">
     <div class="row">
       <div class="col-md-12 header">
