--- a/books_cbv/templates/books_cbv/cita_list.html
+++ b/books_cbv/templates/books_cbv/cita_list.html
@@ -22,7 +22,8 @@
     <div class="row">
       <div class="col-md-8 col-md-offset-2 table-cel">
         <div class="row">
-          <div class="col-md-10">{{ cita.name }}</div>
+          <div class="col-md-3">{{ cita.name }}</div>
+          <div class="col-md-7">{{ cita.fecha_cita|date }}</div>
           <div class="col-md-1">
             <a href="{% url 'books_cbv:book_edit_cita' cita.id %}">
               <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
