--- a/books_cbv/templates/books_cbv/animal-view.html
+++ b/books_cbv/templates/books_cbv/animal-view.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-  <div class="container" id="animalList">
+  <div class="container" id="moduleAnimalView">
     <div class="row">
       <div class="col-md-12 header">
         <div class="text-center">
@@ -19,29 +19,9 @@
     </div>
 
     {% verbatim %}
-        hola {{ animals }}
+        hola {{ name }}
         <div v-on:click="created">aquí</div>
     {% endverbatim %}
-
-    {% for animal in object_list %}
-    <div class="row">
-      <div class="col-md-8 col-md-offset-2 table-cel">
-        <div class="row">
-          <div class="col-md-9">{{ animal.name }}</div>
-          <div class="col-md-1">
-            <a href="{% url 'books_cbv:book_edit_animal' animal.id %}">
-              <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-            </a>
-          </div>
-          <div class="col-md-1">
-            <a href="{% url 'books_cbv:book_delete_animal' animal.id %}">
-              <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-    {% endfor %}
 
     <div class="row">
       <div class="col-md-8 col-md-offset-2 text-center">
